yamls/redpanda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redpanda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redpanda
  template:
    metadata:
      labels:
        app: redpanda
    spec:
      containers:
      - name: redpanda
        image: redpandadata/redpanda:latest
        ports:
        - containerPort: 9092
        args:
          - redpanda
          - start
          - --overprovisioned
          - --smp
          - "1"
          - --memory
          - 1G
          - --reserve-memory
          - 0M
          - --node-id
          - "0"
          - --check=false
          - --kafka-addr
          - PLAINTEXT://0.0.0.0:9092
          - --advertise-kafka-addr
          - PLAINTEXT://redpanda.default.svc.cluster.local:9092
---
apiVersion: v1
kind: Service
metadata:
  name: redpanda
spec:
  selector:
    app: redpanda
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
