yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
spec:
  rules:
    - host: frontend
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5002

          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: websocket-service
                port:
                  number: 5003
                  
          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 5004

          - path: /api/media
            pathType: Prefix
            backend:
              service:
                name: multimedia-service
                port:
                  number: 3001

          - path: /api/groups
            pathType: Prefix
            backend:
              service:
                name: groupchat-service
                port:
                  number: 5005
